# dagster-composable-graphs

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  run-tests.yml
dagster_composable_graphs/: __init__.py  compose.py  jobs.py  models.py  util.py
docs/: astro.config.mjs  package-lock.json  package.json  wrangler.toml
docs/src/content/docs/: index.mdx  overview.md
docs/src/content/docs/guides/: advanced-usage.md  example.md  getting-started.md
example/: README.md  code_location.py  concat_graphs.yaml  jobs.py  pyproject.toml
examples/advanced_usage/: pyproject.toml
examples/advanced_usage/example/: code_location.py  jobs.py  json_pointer.yaml
examples/getting_started/: README.md  pyproject.toml
examples/getting_started/example/: jobs.py
tests/: test_graph.py  test_util.py
tests/data/: test_executor.yaml  test_graph.yaml  test_input.yaml  test_multiple_outputs.yaml  test_resource.yaml  test_single_input.yaml
tests/package/: graphs.py
